# melange

./: esy.json  j.ml  js_record_fold.ml  test.ml  test.txt
esy.lock/: index.json
jscomp/core/: dune  js_record_fold.ml
jscomp/main/: dune
jscomp/others/: dune.gen
jscomp/runtime/: dune.gen
jscomp/stdlib-412/: dune.gen
jscomp/stdlib-412/stdlib_modules/: dune.gen
jscomp/test/: dune.gen
ocaml-tree/: common.ml  dune  mtree.ml  record_fold.ml  record_intf.ml
ocaml-tree/lib/: dune  helpers.ml
scripts/: ninja.js
