(library
 (name core)
 (wrapped false)
 (flags
  (:standard -w -9-30-50 -open Melange_compiler_libs))
 (preprocess
  (action
   (run cppo %{env:CPPO_FLAGS=} %{input-file})))
 (modules_without_implementation lam_pass_unused_params lam_runtime)
 (libraries
  ext
  common
  frontend
  melange-compiler-libs
  outcome_printer
  js_parser
  napkin))
